// Sample dbdiagram.io schema
// This demonstrates the converter functionality

Enum UserStatus {
  'ACTIVE'
  'INACTIVE'
  'SUSPENDED'
}

Enum OrderStatus {
  'PENDING'
  'CONFIRMED'
  'SHIPPED'
  'DELIVERED'
  'CANCELLED'
}

Table users {
  id int [pk, increment] // Primary key
  username varchar(50) [unique, not null] // Unique username
  email varchar(255) [unique, not null] // User email
  password_hash varchar(255) [not null] // Hashed password
  status UserStatus [default: 'ACTIVE'] // User status
  created_at timestamp [default: `now()`] // Creation timestamp
  updated_at timestamp [default: `now()`] // Last update timestamp
}

Table profiles {
  id int [pk, increment]
  user_id int [not null] // Foreign key to users
  first_name varchar(100) // First name
  last_name varchar(100) // Last name
  bio text // User biography
  avatar_url varchar(255) // Profile picture URL
  date_of_birth date // Birth date
  phone varchar(20) // Phone number
}

Table orders {
  id int [pk, increment]
  user_id int [not null] // Foreign key to users
  order_number varchar(50) [unique, not null] // Unique order number
  status OrderStatus [default: 'PENDING'] // Order status
  total_amount decimal(10,2) [not null] // Total order amount
  shipping_address text [not null] // Shipping address
  billing_address text [not null] // Billing address
  created_at timestamp [default: `now()`] // Order creation time
  updated_at timestamp [default: `now()`] // Last update time
}

Table order_items {
  id int [pk, increment]
  order_id int [not null] // Foreign key to orders
  product_id int [not null] // Foreign key to products
  quantity int [not null] // Item quantity
  unit_price decimal(10,2) [not null] // Unit price
  total_price decimal(10,2) [not null] // Total price for this item
}

Table products {
  id int [pk, increment]
  name varchar(255) [not null] // Product name
  description text // Product description
  price decimal(10,2) [not null] // Product price
  stock_quantity int [not null, default: 0] // Available stock
  category_id int // Foreign key to categories
  is_active boolean [default: true] // Product availability
  created_at timestamp [default: `now()`] // Creation timestamp
  updated_at timestamp [default: `now()`] // Last update timestamp
}

Table categories {
  id int [pk, increment]
  name varchar(100) [not null] // Category name
  description text // Category description
  parent_id int // Self-referencing foreign key
  is_active boolean [default: true] // Category availability
}

// Foreign key relationships
profiles.user_id > ref users.id [onDelete: CASCADE]
orders.user_id > ref users.id [onDelete: CASCADE]
order_items.order_id > ref orders.id [onDelete: CASCADE]
order_items.product_id > ref products.id [onDelete: RESTRICT]
products.category_id > ref categories.id [onDelete: SET NULL]
categories.parent_id > ref categories.id [onDelete: CASCADE]